--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -19,6 +19,7 @@
   --bs-primary: #007bff;
   --bs-secondary: #6c757d;
   --bs-success: #28a745;
+  $primary: #007bff;
 }
 
 [data-bs-theme="dark"] {
@@ -27,4 +28,5 @@
   --bs-primary: #0d6efd;
   --bs-secondary: #adb5bd;
   --bs-success: #198754;
+    $primary: #22303e;
 }
