--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -19,6 +19,11 @@
   --bs-primary: #007bff;
   --bs-secondary: #6c757d;
   --bs-success: #28a745;
+  --bs-danger: #dc3545;
+  --bs-border-color: #dee2e6;
+  --bs-primary-rgb: 0, 123, 255;
+  --bs-secondary-rgb: 108, 117, 125;
+  --bs-danger-rgb: 220, 53, 69;
 }
 
 [data-bs-theme="dark"] {
@@ -27,4 +32,9 @@
   --bs-primary: #0d6efd;
   --bs-secondary: #adb5bd;
   --bs-success: #198754;
+  --bs-danger: #dc3545;
+  --bs-border-color: #495057;
+  --bs-primary-rgb: 13, 110, 253;
+  --bs-secondary-rgb: 173, 181, 189;
+  --bs-danger-rgb: 220, 53, 69;
 }
