--- a/client/src/pages/wordle/Wordle.scss
+++ b/client/src/pages/wordle/Wordle.scss
@@ -4,6 +4,6 @@
     height: calc(100vh - 40px); // Adjust for header height
 }
 
-#root {
-    //height: 100vh;
+.game-board {
+    flex-grow: 1;
 }
