Keyboard with flex

--- a/client/src/pages/wordle/Keyboard.scss
+++ b/client/src/pages/wordle/Keyboard.scss
@@ -1,6 +1,6 @@
 // Variables for easy customization
 $keyboard-container-padding: 0;
-$keyboard-container-margin-top: 1rem;
+$keyboard-container-margin-top: 0;
 $keyboard-container-max-width: 500px;
 
 $keyboard-row-margin-bottom: 0.5rem;
