--- a/client/src/pages/wordle/Wordle.scss
+++ b/client/src/pages/wordle/Wordle.scss
@@ -2,9 +2,5 @@
     display: flex;
     flex-direction: column;
     height: calc(100vh - 40px); // Adjust for header height
-}
-
-.game-board {
-    flex-grow: 1;
-    overflow: hidden;
+    overflow: hidden; // Prevent overflow
 }
