--- a/client/src/pages/wordle/Wordle.scss
+++ b/client/src/pages/wordle/Wordle.scss
@@ -1,6 +1,8 @@
 .wordle-container {
     display: flex;
     flex-direction: column;
-    height: calc(100vh - 40px); // Adjust for header height
+    flex: 1;
+    align-items: stretch;
     overflow: hidden; // Prevent overflow
+    max-width: 100vw;
 }
